--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,17 @@
     <string name="rate_limit_error">What\'s the hurry? Wait a couple seconds and try again.</string>
     <string name="unknown_error">Something went wrong... Please try again in a few seconds.</string>
     <string name="general">General</string>
+    <string name="looking_for_categories">Looking for quiz categories...</string>
+    <string name="set_up_your_quiz">Set up your quiz</string>
+    <string name="question_amount">Question amount</string>
+    <string name="difficulty">Difficulty</string>
+    <string name="easy">Easy</string>
+    <string name="medium">Medium</string>
+    <string name="hard">Hard</string>
+    <string name="type">Type</string>
+    <string name="any">Any</string>
+    <string name="multiple_choise">Multiple choise</string>
+    <string name="true_false">True/False</string>
+    <string name="cancel">Cancel</string>
+    <string name="start_quiz">Start quiz</string>
 </resources>
